cmpleted first section of landing page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> <!-- Font Awesome -->
 </head>
 <body>
-    
+    <section class="sectionOne">
+        <nav>
+            <label for="" class="logo"><a href="index.html"><img src="./assests/logo/logo.png" alt=""></a></label>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#shop"><img src="./assests/logo/shop.png" alt=""></a></li>
+            </ul>
+        </nav>
+        <p id="firstP">Our clothing, your comfort</p>
+        <P>We understand that you need to look good and feel great.</P>
+        <p>It all starts with what you are wearing.</p>
+        <p><i class="fas fa-chevron-down"></i></p>
+    </section>
 </body>
 </html>
