added see products & gender selection

--- a/index.html
+++ b/index.html
@@ -23,5 +23,26 @@
         <p>It all starts with what you are wearing.</p>
         <p><i class="fas fa-chevron-down"></i></p>
     </section>
+    <section>
+        <div>
+            <div class="mwc">
+                <div>
+                    <input type="checkbox" id="men" name="men"
+                           checked>
+                    <label for="men">MEN</label>
+                </div>
+                  
+                <div>
+                    <input type="checkbox" id="women" name="women">
+                    <label for="women">WOMEN</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="children" name="children">
+                    <label for="children">CHILDREN</label>
+                </div>
+                <label class="seeProducts" for=""><a href="">SEE ALL PRODUCTS</a></label>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
